# agents-dcs

./: .gitignore  CONTRIBUTING.md  README.md  config.example.toml  pyproject.toml  smoke_test.py
benchmarks/: coverage_benchmark.py  report_benchmark.py  retrieval_benchmark.py
configs/: baselines.yaml  models.yaml
dcs/: __init__.py  cli.py  client.py  client_grep.py  client_parsing.py  codemap.py  critic.py  decomposer.py  executor.py  indexing.py  lmstudio_context.py  pipeline.py  plan_review.py  planner.py  router.py  runtime_config.py  shared.py  types.py
docs/: agent-architecture-v2.md  benchmarking.md  execution-plan.md
eval/: metrics.py  runner.py
eval/tasks/coding/: search_engine.yaml
eval/tasks/qa/: mcp_protocol.yaml
tests/: test_benchmark_modules.py  test_cli.py  test_client_retrieval_filters.py  test_codemap.py  test_critic.py  test_executor_overflow.py  test_indexing.py  test_lmstudio_context.py  test_plan_review.py  test_planner_graph_followups.py
