[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-dcs"
version = "0.0.1"
description = "Dynamic Context Scaffold (DCS) for YAMS-backed retrieval, evaluation, and plan review"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-only"}
authors = [{name = "YAMS Project"}]
keywords = [
  "yams",
  "agent",
  "llm",
  "scaffolding",
  "dynamic-context",
  "retrieval",
  "rlm",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "openai>=1.50",
  "tiktoken>=0.8",
  "pyyaml>=6.0",
  "rich>=13.0",
  "lmstudio>=1.5.0",
  "dspy-ai>=2.5.40",
]

[project.scripts]
dcs = "dcs.cli:main"
research-agent = "dcs.cli:main"
research-agent-benchmark-coverage = "benchmarks.coverage_benchmark:main"
research-agent-benchmark-retrieval = "benchmarks.retrieval_benchmark:main"
research-agent-benchmark-report = "benchmarks.report_benchmark:main"

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8.2",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# The formatter is the source of truth for wrapping; don't fail lint on line length.
# Keep Enum style suggestions informational for now.
ignore = ["E501", "UP042"]

[tool.hatch.build.targets.wheel]
packages = ["benchmarks", "dcs", "eval"]

[tool.hatch.build.targets.wheel.force-include]
"configs" = "configs"

[tool.hatch.build.targets.sdist]
include = [
  "AGENTS.md",
  "README.md",
  "benchmarks/**/*.py",
  "config.example.toml",
  "configs/**/*.yaml",
  "dcs/**/*.py",
  "docs/**/*.md",
  "eval/**/*.py",
  "eval/tasks/**/*.yaml",
  "smoke_test.py",
  "tests/**/*.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
